--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url(https://i.postimg.cc/L6BCDwj4/night-snowy-mountain-scenery-digital-art-4k-wallpaper-uhdpaper-com-934-0-i.jpg);
+  background: url(https://img.freepik.com/premium-photo/luxury-4k-highly-resolution-nature-wallpaper-background_649024-7920.jpg?w=826);
   background-repeat: no-repeat;
   background-size: cover;
 }
