--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ p {
   position: absolute;
   font-family: cursive;
   white-space: nowrap;
-  font-size: 2em;
-  color: #ff0202;
+  font-size: 5em;
+  color: #b06391;
   text-shadow: 0px 1px 5px #f5deb3;
   font-weight: 700;
 }
