--- a/letter.css
+++ b/letter.css
@@ -317,3 +317,19 @@ h1 sub {
     top: -170%;
   }
 }
+a
+{
+ position: relative;
+  width: 16em;
+  font-size: 100%;
+  font-weight: 400;
+  margin: 20% auto;
+  color: #4ee;
+  opacity: 0;
+  z-index: 1;
+  -webkit-animation: intro 2s ease-out;
+  -moz-animation: intro 2s ease-out;
+  -ms-animation: intro 2s ease-out;
+  -o-animation: intro 2s ease-out;
+  animation: intro 2s ease-out;
+}
